src/objects/City__c.object
<CustomObject>
    <fields>
        <fullName>CITY__c</fullName>
        <label>CITY</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PINCODE__c</fullName>
        <label>PINCODE</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATE__c</fullName>
        <label>STATE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUBURBS__c</fullName>
        <label>SUBURBS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZONE__c</fullName>
        <label>ZONE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>City</label>
    <nameField>
        <label>City Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>